--- a/views/login.ejs
+++ b/views/login.ejs
@@ -84,7 +84,7 @@
                             }
                         } catch (error) {
                             console.error("JSON Parse Error:", error);
-                            alert('Invalid server response. Check console.');
+                            alert('Server Error.');
                         }
                     } else {
                         alert('Error occurred while logging in.');
