added new student pages
put all the student pages in a separate folder in views called "student"

--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -110,7 +110,7 @@
                 <div class="subjects">
                     <div>
                         <div style="font-size: 80px;">📚</div>
-                        <a href="maths.html">Maths</a>
+                        <a href="student_subject.ejs">Maths</a>
                     </div>
                     <div>
                         <div style="font-size: 80px;">🧪</div>
