fixed db for now
made connections b/w subjects and students, assignments and students.
fixed localstorage issues

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -99,9 +99,9 @@
         }
 
         // Clear login token when the page loads
-        window.onload = function() {
+        window.addEventListener("pageshow", function() {
             deleteTokenLocalStorage();
-        };
+        });
     </script>
 </body>
 </html>
