--- a/views/student/student_subject.ejs
+++ b/views/student/student_subject.ejs
@@ -111,6 +111,22 @@
         </div>
     </div>
     <script>
+        // Function to handle the pageshow event
+        function handlePageShow(event) {
+            if (event.persisted) {
+                // If the page is shown from the cache (e.g., when navigating back),
+                // check if the token is still in local storage
+                checkTokenLocalStorage();
+        }}
+        function checkTokenLocalStorage() {
+            if (!localStorage.getItem('token')) {
+                // Redirect to login page if token doesn't exist in localStorage
+                window.location.href = '/login';
+            }
+        }
+        // Add event listener for the pageshow event
+        window.addEventListener('pageshow', handlePageShow);
+
         document.getElementById("activity").addEventListener("click", function() {
             window.location.href = "/student_dashboard/subject/activity";
         });
