--- a/views/student/student_submission.ejs
+++ b/views/student/student_submission.ejs
@@ -109,6 +109,22 @@
         </div>
     </div>
     <script>
+        // Function to handle the pageshow event
+        function handlePageShow(event) {
+            if (event.persisted) {
+                // If the page is shown from the cache (e.g., when navigating back),
+                // check if the token is still in local storage
+                checkTokenLocalStorage();
+        }}
+        function checkTokenLocalStorage() {
+            if (!localStorage.getItem('token')) {
+                // Redirect to login page if token doesn't exist in localStorage
+                window.location.href = '/login';
+            }
+        }
+        // Add event listener for the pageshow event
+        window.addEventListener('pageshow', handlePageShow);
+
         function updateFileName() {
             const fileInput = document.getElementById("file-upload");
             const fileNameDisplay = document.getElementById("file-name");
